# ImmoScope

./: .dockerignore  .env copy.example  .gitignore  Architecture.drawio  Makefile  README.md  docker-compose.yml  entrypointApiMaillage.sh  entrypointBack.sh  entrypointFront.sh  inconnue_page1_00000_page1_20250516_103803.html  logic_immo_properties.json  page_complete.html
api/: README.md  charts.py  main.py  requirements.txt
api/auth/: __init__.py  config.py  dependencies.py  models.py  utils.py
api/db/: models.py  session.py
api/routes/: auth.py  cache.py  comment.py  data.py  proprietes.py  test.py
api/scraping/: CleanVille.py  leboncoin.py  logicimmo copy.py  logicimmo.py  logicimmo2.py  scraping1.py  workers.py
api/services/: cache_service.py  data_service.py  resource_monitor.py
api_maillage/: .gitignore  README.md  api.py  bddManager.py  cache_service.py  requirements.txt  try.py
comment/: scrap_bien_dans_ma_ville.py
docker/: DockerfileApiMaillage  DockerfileBack  DockerfileFront
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/api/data/: data.ts  data.types.ts
frontend/api/login_register/: call.ts
frontend/api/maillage/: constant.ts  index.ts  maillage.ts  (+1 more)
frontend/app/: StoreProvider.tsx  form.tsx  globals.css  page.module.css  page.tsx
frontend/store/: searchSlice.ts  store.ts
spark-jobs/: DockerfileSpark  fix_transfert_csv.py  main.py  nlp.py  pyproject.toml  requirements.txt  run.py  sentiment.py  spark_sentiment.py  test.py  transform_comment.py  transform_html_data.py  wait-for-spark-job.sh
(+15 files in other folders)
