[project]
name = "spark-jobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ace-tools>=0.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "elasticsearch>=9.0.2",
    "ipykernel>=6.29.5",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "pyspark>=4.0.0",
    "python-dotenv>=1.1.1",
]
